<resources>
	<string name="app_name" translatable="false">PlanMe</string>

	<string name="login_failed">Invalid email and/or password</string>
	<string name="invalid_email">Not a valid email</string>
	<string name="invalid_password">Not a valid password</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="forgot_password"><u>Forgot your password?</u></string>
	<string name="or">or</string>
	<string name="sign_up">Sign Up</string>
	<string name="login_with_google">Login with Google</string>
	<string name="login_with_facebook">Login with Facebook</string>
	<string name="full_name">Full name</string>
	<string name="confirm_password">Confirm password</string>
	<string name="agree_tos_privacy">By signing up, you agree to our Terms of Service and Privacy Policy</string>
	<string name="signup_failed_empty_fields">All fields must be filled</string>
	<string name="password_mismatch">The passwords must match</string>
	<string name="sign_up_failed">Sign up failed</string>
	<string name="popular">Popular</string>
	<string name="search">Search</string>
	<string name="popular_plans_near_you">Popular plans near you</string>
	<string name="account">Account</string>
	<string name="logout">Logout</string>
	<string name="reserve">Reserve</string>
	<string name="see_more_info"><u>See more info</u></string>
	<string name="set_favorite_plan">Mark plan as favorite</string>
	<string name="description">Description</string>
	<string name="pictures">Pictures</string>
	<string name="list_plan_pictures">List of plan\'s pictures</string>
	<string name="reviews">Reviews</string>
	<string name="see_all_reviews"><u>See all reviews</u></string>
	<string name="location">Location</string>
	<string name="see_on_the_map"><u>See on the map</u></string>
	<string name="products_and_services">Products and Services</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="reservations">Reservations</string>
	<string name="size">Size</string>
	<string name="dismiss">Dismiss</string>
	<string name="request">Request</string>

	<!-- Locations permissions -->
	<string name="permission_location_denied">Location access permissions were denied</string>
	<string name="permission_fine_location_title">Fine location access</string>
	<string name="permission_fine_location_message">
		The app needs fine location access to accurately show you your location on the map
	</string>
	<string name="permissions_location_title">Location access</string>
	<string name="permissions_location_message">
		The app needs location access to show to show you your location on the map
	</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="reservation_size">Tamaño de la reserva</string>
	<string name="reservation_failed_empty_fields">All fields must be filled</string>
	<string name="reservation_created">Reservation created successfully</string>
	<string name="plan_me">Plan Me</string>
	<string name="match_plan">Match a plan for me</string>
	<string name="swipe_mode">Swipe Mode</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="do_you_feel_money">Do you feel money?</string>
	<string name="i_need_a_plan_for_something">I need a plan for something…</string>
	<string name="serious">Serious</string>
	<string name="fun">Fun!</string>
	<string name="is_it_romantic">And is it romantic?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="no_way">No way</string>
	<string name="heck_yeah">Heck yeah!</string>
	<string name="friends">Friends</string>
	<string name="solo">Solo</string>
	<string name="coworkers_boss_professional">Coworkers / Boss / Professional</string>
	<string name="partner">A date</string>
	<string name="my_group_is">My group is…</string>
	<string name="family">Family</string>
	<string name="what_about_money">What about money?</string>
	<string name="low_prices_only">Low prices only</string>
	<string name="i_can_spend">I can spend</string>
	<string name="dont_care_about_price">I don\'t care about price / I\'m flexible</string>
	<string name="is_it_a_special_occasion">Is it a special occasion?</string>
	<string name="more_specific">Hey, I want to be more specific!</string>
	<string name="gastronomy">Gastronomy</string>
	<string name="restaurant">Restaurant</string>
	<string name="cafe">Cafe</string>
	<string name="bar">Bar</string>
	<string name="disco">Disco</string>
	<string name="nightlife">Nightlife</string>
	<string name="international">International</string>
	<string name="fast_food">Fast food</string>
	<string name="fancy">Fancy</string>
	<string name="posh">Posh</string>
	<string name="european">European</string>
	<string name="american">American</string>
	<string name="asian">Asian</string>
	<string name="for_kids">For kids</string>
	<string name="_18">+18</string>

	<string-array name="special_occasions">
		<item>No</item>
		<item>Kid birthday</item>
		<item>Adult birthday</item>
		<item>First date</item>
		<item>Anniversary</item>
		<item>Baby shower</item>
		<item>Graduation</item>
		<item>Wedding</item>
	</string-array>
</resources>
